fixes #1422 - Pictures distorted

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -289,7 +289,7 @@
     }
 
 .coveredCardImage {
-    background-size: 100% 100%;
+    background-size: cover;
     background-position: center center;
 }
 
